--- a/src/styles.scss
+++ b/src/styles.scss
@@ -306,3 +306,22 @@ input[type="number"] {
 input[type="number"] {
   -ms-appearance: textfield;
 }
+
+
+.ellipsis-1{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  word-wrap: break-word;
+}
+
+.ellipsis-2{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  word-wrap: break-word;
+}
