--- a/src/app/dog-detail/dog-detail.component.html
+++ b/src/app/dog-detail/dog-detail.component.html
@@ -4,10 +4,13 @@
         <img src="{{dogInfo.photo}}" alt="{{dogInfo.name}}">
     </div>
     <div class="info">
-        <div>
-            <h1 [ngClass]="{'male': dogInfo.gender === 'male', 'female': dogInfo.gender === 'female'}">{{dogInfo.name}}</h1>
-            <p class="breed">{{dogInfo.breed}}</p>
-        </div>
+       
+            
+            <h1 class="ellipsis-1" [ngClass]="{'male': dogInfo.gender === 'male', 'female': dogInfo.gender === 'female'}">{{dogInfo.name}}</h1>
+            
+            <p class="breed ellipsis-1" >{{dogInfo.breed}}</p>
+            
+        
         <div class="body-data" [ngClass]="{'male': dogInfo.gender === 'male', 'female': dogInfo.gender === 'female'}">
             <p>{{dogInfo.age | age}}</p>
             <p>{{dogInfo.height | height}}</p>
