--- a/src/app/dog-detail/dog-detail.component.scss
+++ b/src/app/dog-detail/dog-detail.component.scss
@@ -35,24 +35,18 @@
 
         .info{
         
-            width: 75%;            
+            width: calc(100% - 180px - 1rem);            
             display: flex;
            flex-direction: column;
            gap: 1rem;
+
 
            @media (max-width: 576px) {
             & {
                 
                 text-align: center;
                 width: 100%;
-                h1,.breed{
-                    margin-right: auto;
-                    margin-left: auto;
-                    width: 304px;
-                    white-space: nowrap;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                }
+            
             }
 
             
@@ -112,6 +106,9 @@
             
             border-radius: 25px;
             margin: 0 auto;
+        }
+        p{
+            word-wrap: break-word;
         }
     }
     
