integration with backend and some adjustments

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -109,14 +109,19 @@ table {
   h1{
     font-size: var(--font-size-7);
     font-weight: var(--font-weight-500);
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.25rem;
+    padding-bottom: 0.25rem;
   }
   h2{
     font-size: var(--font-size-6);
+    margin-bottom: 0.25rem;
+    padding-bottom: 0.25rem;
   }
   h3{
     font-size: var(--font-size-5);
     font-weight: var(--font-weight-500);
+    margin-bottom: 0.25rem;
+    padding-bottom: 0.25rem;
   }
   h4{
     font-size: var(--font-size-4);
