--- a/src/app/dog-detail/dog-detail.component.html
+++ b/src/app/dog-detail/dog-detail.component.html
@@ -1,29 +1,35 @@
+
+@if(isLoading){
+    <p>Loading...</p>
+}
+@else{
 <div class="detail">
     <div class="main-info">
     <div class="img-container">
-        <img src="{{dogInfo.photo}}" alt="{{dogInfo.name}}">
+        <img src="{{dog.photo}}" alt="{{dog.name}}">
     </div>
     <div class="info">            
-            <h1 class="ellipsis-1" [ngClass]="{'male': dogInfo.gender === 'male', 'female': dogInfo.gender === 'female'}">{{dogInfo.name}}</h1>            
-            <p class="breed ellipsis-1" >{{dogInfo.breed}}</p>            
-        <div class="body-data" [ngClass]="{'male': dogInfo.gender === 'male', 'female': dogInfo.gender === 'female'}">
-            <p>{{dogInfo.age | age}}</p>
-            <p>{{dogInfo.height | height}}</p>
-            <p>{{dogInfo.weight | weight}}</p>
+            <h1 class="ellipsis-1" [ngClass]="{'male': dog.gender === 'male', 'female': dog.gender === 'female'}">{{dog.name}}</h1>            
+            <p class="breed ellipsis-1" >{{dog.breed}}</p>            
+        <div class="body-data" [ngClass]="{'male': dog.gender === 'male', 'female': dog.gender === 'female'}">
+            <p>{{dog.age | age}}</p>
+            <p>{{dog.height | height}}</p>
+            <p>{{dog.weight | weight}}</p>
         </div>
     </div>
 </div>
-    @if(dogInfo.about){
+    @if(dog.about){
         <div class="about">
             <div class="divisor"></div>
-            <p>{{dogInfo.about}}</p>
+            <p>{{dog.about}}</p>
         </div>
     }
         <div class="buttons">
             <button class="cancel" [routerLink]="['/dogs']">Back</button>
             <div class="actions">
                 <button class="edit" (click)="goToEditForm()">Edit</button>
-                <button class="delete" (click)="deleteDog(dogInfo.id)">Delete</button>
+                <button class="delete" (click)="deleteDog(dog.id)">Delete</button>
             </div>
         </div>
 </div>
+}
