--- a/src/app/edit-dog/edit-dog.component.html
+++ b/src/app/edit-dog/edit-dog.component.html
@@ -1,6 +1,10 @@
 <div class="ellipsis-2">
-<h1 ellipsis-2>Editing {{dog.name}}</h1>
+<h1 ellipsis-2>Editing {{dog?.name??''}}</h1>
 </div>
+@if(isLoading){
+    <p>Loading...</p>
+}
+@else{
 <form [formGroup]="editDogData" (ngSubmit)="onSubmit()">
     <div class="inputs">
     <label for="name">
@@ -105,3 +109,5 @@
     <button class="edit" type="submit" [disabled]="!editDogData.valid">Edit Dog</button>
 </div>
 </form>
+
+}
