--- a/src/app/list-dogs/list-dogs.component.html
+++ b/src/app/list-dogs/list-dogs.component.html
@@ -3,7 +3,14 @@
 <h1>My Dogs</h1>
 <button class="base" type="button" routerLink="/dogs/new">New Dog</button>
 </div>
-@if(dogs.length > 0){
+
+@if(isLoading){
+    <p>Loading...</p>
+}
+@if(error && !isLoading){
+    <p>{{error}}</p>
+}
+@else if(dogs.length > 0 && !isLoading){
 <div class="grid">
 @for(d of dogs; track d.id){
     <app-dog-card [dog]="d"></app-dog-card>
