forms adjustments and improvements

--- a/src/app/edit-dog/edit-dog.component.scss
+++ b/src/app/edit-dog/edit-dog.component.scss
@@ -75,3 +75,10 @@ label[for="name"] {
       }
   }
   }
+
+  .countChars{
+    margin-left: auto;
+    color: var(--dark-gray-color);
+    font-weight: var(--font-weight-400);
+    font-size: var(--font-size-sm-1);
+  }
