--- a/src/app/create-dog/create-dog.component.html
+++ b/src/app/create-dog/create-dog.component.html
@@ -7,11 +7,11 @@
         Name<span class="required">*</span>
     </div>
         <input type="text" name="name" id="name" maxlength="12" ngModel #name="ngModel" required>
+        <div>
         @if(name.touched && !name.valid){
-            <div>
             <small>Name is required</small>
-            </div>
         }
+    </div>
     </label>
 
     <label for="age">
@@ -19,10 +19,12 @@
         Age<span class="required">*</span>
     </div>
         <input type="number" name="age" id="age" min="0" max="20" ngModel #age="ngModel" required>
-        @if(age.touched && !age.valid){
+        @if(age.touched && !age.valid && age.value===""){
             <div>
             <small>Age is required</small>
             </div>
+        }@else if(age.touched && !age.valid &&(age.value < 0 ||age.value > 20)){
+            <small>The age is between 0 and 20</small>
         }
     </label>
 
@@ -34,11 +36,11 @@
             <option value="male">Male</option>
             <option value="female">Female</option>
         </select>
+        <div>
         @if(gender.touched && !gender.valid){
-            <div>
             <small>Gender is required</small>
-            </div>
         }
+    </div>
     </label>
 
     <label for="breed">
@@ -46,33 +48,38 @@
         Breed<span class="required">*</span>
     </div>
         <input type="text" name="breed" id="breed" maxlength="31" ngModel #breed="ngModel" required>
+        <div>
         @if(breed.touched && !breed.valid){
-            <div>
             <small>Breed is required</small>
-            </div>
         }
+    </div>
     </label>
     <label for="height">
         <div>
         Height<span class="required">*</span>
     </div>
         <input type="number" name="height" id="height" min="0.1" ngModel #height="ngModel" required>
-        @if(height.touched  && !height.valid){
-            <div>
+        <div>
+        @if(height.touched  && !height.valid && height.value===""){
             <small>Height is required</small>
-            </div>
+        }@else if(height.touched && !height.valid &&height.value < 0.1){
+            <small>The height minimum is 0.1 cm</small>
         }
+    </div>
     </label>
     <label for="weight">
         <div>
         Weight<span class="required">*</span>
     </div>
         <input type="number" name="weight" id="weight" min="0.1" ngModel #weight="ngModel" required>
-        @if(weight.touched && !weight.valid){
-            <div>
+        
+        <div>
+        @if(weight.touched && !weight.valid && weight.value===""){
             <small>Weight is required</small>
-            </div>
+        }@else if(weight.touched && !weight.valid &&weight.value < 0.1){
+            <small>The weight minimum is 0.1 kg</small>
         }
+    </div>
     </label>
 
     <label for="photo">
@@ -80,25 +87,28 @@
         Photo<span class="required">*</span>
     </div>
         <input type="text" name="photo" id="photo" ngModel #photo="ngModel" required>
+        <div>
         @if(formData.submitted || photo.touched  ){
-            <div>
             @if(!photo.valid || photo.value===''){
             <small>Photo is required</small>
             }
             @else if(!validateUrl(photo.value)){
                 <small>Invalid URL. It needs to end with .jpg or .png</small>
             }
-            </div>
         }
+    </div>
     </label>
 
     <label for="about">
         About
-        <textarea name="about" id="about" ngModel></textarea>
+        <textarea name="about" id="about" maxLength="500" [(ngModel)]="aboutText" #about="ngModel"></textarea>
+        <span class="countChars">{{aboutText.length}}/500</span>
     </label>
 </div>
     <div class="buttons">
         <button class="cancel" type="button" [routerLink]="['/dogs']">Cancel</button>
-        <button class="confirm" type="submit" [disabled]="!formData.valid || !validateUrl(photo.value)">Create Dog</button>
+        <button class="confirm" type="submit"
+         [disabled]="!formData.valid || !validateUrl(photo.value)"
+         >Create Dog</button>
     </div>
 </form>
