--- a/src/app/edit-dog/edit-dog.component.html
+++ b/src/app/edit-dog/edit-dog.component.html
@@ -12,11 +12,11 @@
             Name<span class="required">*</span>
         </div>
         <input type="text" name="name" id="name" formControlName="name" maxlength="12" [value]="dog.name" >
-        @if( editDogData.get('name').status === "INVALID" || editDogData.get('name').touched && !editDogData.get('name').valid){
-            <div>
+        <div>
+        @if( isFieldRequiredError("name")){
             <small>Name is required</small>
-            </div>
         }
+    </div>
     </label>
 
     <label for="age">
@@ -24,11 +24,13 @@
             Age<span class="required">*</span>
         </div>
         <input type="number" name="age" id="age" formControlName="age" min="0" max="20" [value]="dog.age" >
-        @if( editDogData.get('age').status === "INVALID" || editDogData.get('age').touched && !editDogData.get('age').valid){
-            <div>
+        <div>
+        @if( isFieldRequiredError("age")){
             <small>Age is required</small>
-            </div>
+        }@else if(isKeyRangeError("age")){
+            <small>The age is between 0 and 20 years old</small>
         }
+    </div>
     </label>
 
     <label for="gender">
@@ -41,11 +43,11 @@
             <option value="female" [selected]="dog.gender==='female'">Female</option>
         </select>
 
-        @if(editDogData.get('gender').status === "INVALID" || editDogData.get('gender').touched && !editDogData.get('gender').valid){
-            <div>
+        <div>
+        @if(isFieldRequiredError("gender")){
             <small>Gender is required</small>
-            </div>
         }
+    </div>
     </label>
 
     <label for="breed">
@@ -53,33 +55,37 @@
             Breed<span class="required">*</span>
         </div>
         <input type="text" name="breed" id="breed" [value]="dog.breed" maxlength="31" formControlName="breed" >
-        @if(editDogData.get('breed').status === "INVALID" || editDogData.get('breed').touched && !editDogData.get('breed').valid){
-            <div>
+        <div>
+        @if(isFieldRequiredError("breed")){
             <small>Breed is required</small>
-            </div>
         }
+    </div>
     </label>
     <label for="height">
         <div>
             Height<span class="required">*</span>
         </div>
-        <input type="number" name="height" id="height" min="0.1" [value]="dog.height" formControlName="height" >
-        @if(editDogData.get('height').status === "INVALID" || editDogData.get('height').touched && !editDogData.get('height').valid){
-            <div>
+        <input type="number" name="height" id="height" min="0.1" max="112" [value]="dog.height" formControlName="height" >
+        <div>
+        @if(isFieldRequiredError("height")){
             <small>Height is required</small>
-            </div>
+        }@else if(isKeyRangeError("height")){
+            <small>The height is between 0.1 and 112 cm</small>
         }
+    </div>
     </label>
     <label for="weight">
         <div>
             Weight<span class="required">*</span>
         </div>
-        <input type="number" name="weight" id="weight" min="0.1" [value]="dog.weight" formControlName="weight" >
-        @if(editDogData.get('weight').status === "INVALID" || editDogData.get('weight').touched && !editDogData.get('weight').valid){
-            <div>
+        <input type="number" name="weight" id="weight" min="0.1" max="156" [value]="dog.weight" formControlName="weight" >
+        <div>
+        @if(isFieldRequiredError("weight")){
             <small>Weight is required</small>
-            </div>
+        }@else if(isKeyRangeError("weight")){
+            <small><small>The weight is between 0.1 and 156 kg</small></small>
         }
+    </div>
     </label>
 
     <label for="photo">
@@ -87,21 +93,19 @@
             Photo<span class="required">*</span>
         </div>
         <input type="text" name="photo" id="photo" [value]="dog.photo" formControlName="photo" >
-        @if( (editDogData.get('photo').touched || !editDogData.get('photo').valid) && editDogData.get('photo').errors?.['invalidUrl'] !== null  ){
-            <div>
-            @if(editDogData.get('photo').value===''){
+        <div>
+        @if( isFieldRequiredError("photo")){
                 <small>Photo is required</small>
-            }
-            @else{
-                <small>Invalid URL. It needs to end with .jpg or .png</small>
-            }
-            </div>
+        }@else if(isPhotoInvalidUrl()){
+            <small>Invalid URL. It needs to end with .jpg or .png</small>
         }
+    </div>
     </label>
 
     <label for="about">
         About
-        <textarea name="about" id="about" [value]="dog.about" formControlName="about"></textarea>
+        <textarea name="about" id="about" [value]="dog.about" maxLength="500" formControlName="about"></textarea>
+        <span class="countChars">{{editDogData.get('about')?.length || 0}}/500</span>
     </label>
 </div>
     <div class="buttons">
