--- a/src/app/edit-dog/edit-dog.component.html
+++ b/src/app/edit-dog/edit-dog.component.html
@@ -11,7 +11,7 @@
         <div>
             Name<span class="required">*</span>
         </div>
-        <input type="text" name="name" id="name" formControlName="name" maxlength="12" [value]="dog.name" >
+        <input type="text" name="name" id="name" formControlName="name" maxlength="12">
         <div>
         @if( isFieldRequiredError("name")){
             <small>Name is required</small>
@@ -23,7 +23,7 @@
         <div>
             Age<span class="required">*</span>
         </div>
-        <input type="number" name="age" id="age" formControlName="age" min="0" max="20" [value]="dog.age" >
+        <input type="number" name="age" id="age" formControlName="age">
         <div>
         @if( isFieldRequiredError("age")){
             <small>Age is required</small>
@@ -39,8 +39,8 @@
         </div>
         <select name="gender" id="gender" formControlName="gender" >
             
-            <option value="male" [selected]="dog.gender==='male'">Male</option>
-            <option value="female" [selected]="dog.gender==='female'">Female</option>
+            <option value="male" >Male</option>
+            <option value="female" >Female</option>
         </select>
 
         <div>
@@ -54,7 +54,7 @@
         <div>
             Breed<span class="required">*</span>
         </div>
-        <input type="text" name="breed" id="breed" [value]="dog.breed" maxlength="31" formControlName="breed" >
+        <input type="text" name="breed" id="breed"  maxlength="31" formControlName="breed" >
         <div>
         @if(isFieldRequiredError("breed")){
             <small>Breed is required</small>
@@ -65,7 +65,7 @@
         <div>
             Height<span class="required">*</span>
         </div>
-        <input type="number" name="height" id="height" min="0.1" max="112" [value]="dog.height" formControlName="height" >
+        <input type="number" name="height" id="height" formControlName="height" >
         <div>
         @if(isFieldRequiredError("height")){
             <small>Height is required</small>
@@ -78,7 +78,7 @@
         <div>
             Weight<span class="required">*</span>
         </div>
-        <input type="number" name="weight" id="weight" min="0.1" max="156" [value]="dog.weight" formControlName="weight" >
+        <input type="number" name="weight" id="weight" formControlName="weight" >
         <div>
         @if(isFieldRequiredError("weight")){
             <small>Weight is required</small>
@@ -92,7 +92,7 @@
         <div>
             Photo<span class="required">*</span>
         </div>
-        <input type="text" name="photo" id="photo" [value]="dog.photo" formControlName="photo" >
+        <input type="text" name="photo" id="photo" formControlName="photo" >
         <div>
         @if( isFieldRequiredError("photo")){
                 <small>Photo is required</small>
@@ -104,8 +104,8 @@
 
     <label for="about">
         About
-        <textarea name="about" id="about" [value]="dog.about" maxLength="500" formControlName="about"></textarea>
-        <span class="countChars">{{editDogData.get('about')?.length || 0}}/500</span>
+        <textarea name="about" id="about"  maxLength="500" formControlName="about"></textarea>
+        <span class="countChars">{{aboutLength}}/500</span>
     </label>
 </div>
     <div class="buttons">
