--- a/src/app/create-dog/create-dog.component.html
+++ b/src/app/create-dog/create-dog.component.html
@@ -1,6 +1,6 @@
 <h1>Creating new Dog</h1>
 
-<form (ngSubmit)="onSubmit(formData)" #formData="ngForm">
+<form (ngSubmit)="onSubmit(formData)" #formData="ngForm" enctype="multipart/form-data">
     <div class="inputs">
     <label for="name">
         <div>
@@ -20,15 +20,15 @@
     </div>
         <input type="number" name="age" id="age" min="0" max="20" ngModel #age="ngModel" required>
         
+        <div>
         @if(age.touched && !age.valid){
         @if(age.errors?.required){
-            <div>
             <small>Age is required</small>
-            </div>
         }@else if(age.errors?.min || age.errors?.max){
             <small>The age is between 0 and 20 years old</small>
         }
     }
+</div>
     </label>
 
     <label for="gender">
@@ -67,9 +67,9 @@
 
         @if(height.touched && !height.valid){
             @if(height.errors?.required){
-                <div>
+                
                 <small>Height is required</small>
-                </div>
+                
             }@else if(height.errors?.min || height.errors?.max){
                 <small>The height is between 0.1 and 112 cm</small>
             }
@@ -87,9 +87,9 @@
         
         @if(weight.touched && !weight.valid){
             @if(weight.errors?.required){
-                <div>
+                
                 <small>Weight is required</small>
-                </div>
+                
             }@else if(weight.errors?.min || weight.errors?.max){
                 <small>The weight is between 0.1 and 156 kg</small>
             }
@@ -101,16 +101,12 @@
         <div>
         Photo<span class="required">*</span>
     </div>
-        <input  type="text" name="photo" id="photo" ngModel #photo="ngModel" required>
+        <input  type="file" name="photo" id="photo" (change)="onFileChange($event)" ngModel #photo="ngModel" accept="image/*" required>
         <div>
         
-
-        @if(photo.touched) {
-    @if(photo.errors?.required){
-        <small>Photo is required</small>
-    }@else if(!photo.errors?.required && !validateUrl(photo.value)){
-        <small>Invalid URL. It needs to end with .jpg or .png</small>}
-   }
+            @if(photo.touched && !photo.valid){
+                <small>Photo is required</small>
+            }
     </div>
     </label>
 
@@ -123,7 +119,7 @@
     <div class="buttons">
         <button class="cancel" type="button" [routerLink]="['/dogs']">Cancel</button>
         <button class="confirm" type="submit"
-         [disabled]="!formData.valid || !validateUrl(photo.value)"
+         [disabled]="!formData.valid"
          >Create Dog</button>
     </div>
 </form>
