--- a/src/app/edit-dog/edit-dog.component.html
+++ b/src/app/edit-dog/edit-dog.component.html
@@ -92,14 +92,14 @@
         <div>
             Photo<span class="required">*</span>
         </div>
-        <input type="text" name="photo" id="photo" formControlName="photo" >
-        <div>
+        <input type="file" name="photo" id="photo" formControlName="photo" >
+        <!-- <div>
         @if( isFieldRequiredError("photo")){
                 <small>Photo is required</small>
         }@else if(isPhotoInvalidUrl()){
             <small>Invalid URL. It needs to end with .jpg or .png</small>
         }
-    </div>
+    </div> -->
     </label>
 
     <label for="about">
