--- a/src/styles.scss
+++ b/src/styles.scss
@@ -286,7 +286,7 @@ a{
     resize: none;
 }
 
-  input, select, textarea{
+input:not([type="file"]), select, textarea{
     border-radius: 4px;
     border: 1px solid var(--black-color);
     color: var(--black-color);
